# WS2018_projektmanagement

./: .gitignore  README.md
docs/: README.md  _sidebar.md  uml_diagrammtypen.md
umlparser/: .gitignore  Cargo.toml  example.txt  output.txt  sample.txt  usecase_example.txt
umlparser/src/: lib.rs  main.rs
umlparser/src/image_gen/: image_gen.rs  mod.rs
umlparser/src/klassendiagramm/: klasse.rs  mod.rs
umlparser/src/layout/: fruchterman_reingold.rs  graph.rs  graphbuilder.rs  mod.rs  usecase_layout.rs
umlparser/src/parser/: mod.rs  object.rs  parser.rs  relation.rs  vektor.rs
umlparser/src/parser/klassendiagramm/: klassendiagramm.rs  mod.rs
umlparser/src/parser/useCaseDiagramm/: actor.rs  boundary.rs  build_diagramm.rs  mod.rs  relation.rs  usecase.rs  usecasediagramm.rs
umlparser/src/routes/: apiroute.rs  defaultroute.rs  mod.rs  routes.rs
umlparser/src/umlparser/: mod.rs  parser.rs  vektor.rs
umlparser/src/umlparser/klassendiagramm/: klasse.rs
umlparser/static/css/: main.css
umlparser/static/js/fancybox/: index.html
umlparser/templates/: about.html.tera  base.html.tera  content.html.tera  howto.html.tera  index.html.tera
