[package]
name = "umlparser"
version = "0.1.0"
authors = ["jtissen1 <jakob.tissen@fh-bielefeld.de>"]

[dependencies]
rocket = "0.4.0-rc.1"
tera = "0.10"
regex = "1"
image = "0.20.1"
imageproc = "0.17.0"
rusttype = "0.7.3"

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["handlebars_templates", "tera_templates"]

